--- a/chatgpt-springboot-java-integration/src/main/resources/application.yml
+++ b/chatgpt-springboot-java-integration/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 openai:
     model: gpt-3.5-turbo
     api:
-        key: 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
+        key: #chatgpt api key: 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 - key disabled
         url: https://api.openai.com/v1/chat/completions
